Hangul composition: use < base + count checks, not <= checks

Before Unicode 4.1.0 there was an error in the example code for Hangul
normalization that used <= on the ends of some ranges of values, where
they should have used < tests. This was faithfully copied but the need
for correction has only lately come to light.

Thanks to Ma Lin for pointing this out and providing the fix and
test-cases.

Fixes: QTBUG-71894
Change-Id: I5c7fec1f9fac1f7a25b2d5e9c3109a90a7ff49e1
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 182afbe335a8bd494a86defc5d32da3ae8ec7920)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>